2009-10-19  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, digipeater.c, dupecheck.c, igate.c:
	    - Fixed 3rd party dupechecking
	    - Simplified viscous delay and dupechecking.
	      The dupechecking happens at the start of digipeater_backend(),
	      which is called after pbuf's have been subjected to a viscous
	      delay, if every necessary.  First arriving packet is digipeated,
	      if it has steps to do.  If not, rest are still considered dupes,
	      and not digipeated.

	* aprx.h, igate.c:
	    Make rflog() public function to be used by multiple parties.
	    Also mark on the log line the direction to which the packet
	    was going (R/T), and not only its source interface.

	* ax25.c:
	    Moved igate_to_aprsis() call before interface_receive_ax25(),
	    and thus also log received packet on rf.log before it is sent
	    out anywhere.

	* aprx.h, interface.c, digipeater.c, aprx.8.in, aprx.conf.in,
	  aprx-complex.conf.in, dupecheck.c:
	    Moved viscous-delay processor into digipeater's <source>
	    control area.  Implemented Tx-IGate's packet re-formatting
	    rules on interface.c.  Implemented viscous-delay processing
	    in digipeater. Added refcounting on dupe_record_t objects.

	* digipeater.c, igate.c, config.c, aprx.h, aprx-complex.conf.in:
	    Moved regexp reject filters from old style setup at igate.c
	    to new style at digipeater.c.  This will not be able to reject
	    trivially configurable things from Rx-IGate datastreams, but
	    it can be used to control digipeating.

	* ax25.c:
	    Remove unnecessary debug printout.

2009-10-18  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION: 1.91

	* aprx.h, dupecheck.c, digipeater.c, pbuf.c, pbuf.h, aprsis.c,
	  igate.c, keyhash.c:
	    Digipeater local instance of dupechecker.  The dupe-checker
	    does recursive analysis of APRS packets for 3rd party
	    frames, and dupecheck the innermost frame of them.